bugs/client/gameApp/src/view/appStyles.css
@import "./cssVariables.css";

.app {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.app__canvas-container {
    height: 100%;
    width: 100%;
    z-index: 1;
}

.app__map-picker-border {
    pointer-events: none;
    position: absolute;
    border: solid 4px red;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    justify-content: center;
    display: flex;
}

.app__map-picker-label {
    color: red;
    font-size: 24;
    font-weight: 700;
    margin-top: 20px;
}

